--- a/estilo.css
+++ b/estilo.css
@@ -168,19 +168,7 @@ body {
     grid-area: hijo-quienessomos;
 }
 
-@media screen and (max-widht 700px){
-    .contenedor-presentacion {
-        display: grid;
-        margin: 10px;
-        padding: 10px;
-        width: 90%;
-        height: auto;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
-        grid-template-areas:
-            "hijo-nuestrafirma hijo-quienessomos hijo-nuestramision";
-    }
-}
+
 /*MAIN AREAS*/
 
 .titulo-areas {
@@ -264,20 +252,6 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    grid-template-areas:
-        "div-reclamos formulario-de-reclamo";
-    background-image: url(./imagenes/justicia+retributiva+y+restaurativa.jpeg);
-    background-size: cover;
-}
-
-@media only screen and (max-width: 700px) {
-    margin: 10px;
-    padding: 10px;
-    width: 90%;
-    height: auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 2fr;
     grid-template-areas:
         "div-reclamos formulario-de-reclamo";
     background-image: url(./imagenes/justicia+retributiva+y+restaurativa.jpeg);
@@ -421,4 +395,49 @@ body {
 .redes a i {
     font-size: 25px;
     padding: 5px 10px;
+}
+
+@media screen and (max-width: 700px) {
+   
+    .df-navbar{
+        flex-direction: column;
+    }
+
+    .df-ul{
+        flex-direction: column;
+    }
+   
+   .df-areas{
+    flex-direction: column;
+   }
+    .extrajudiciales{
+        padding: 0px;
+    }
+    .contenedor-presentacion {
+        display: grid;
+        margin: 10px;
+        padding: 10px;
+        width: 90%;
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas:
+            "hijo-nuestrafirma"
+            "hijo-quienessomos"
+            "hijo-nuestramision";
+    }
+
+    .contenedor-turnos {
+        margin: 10px;
+        padding: 10px;
+        width: 90%;
+        height: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr;
+        grid-template-areas:
+            "div-reclamos formulario-de-reclamo";
+        background-image: url(./imagenes/justicia+retributiva+y+restaurativa.jpeg);
+        background-size: cover;
+    }
 }
