--- a/estilo.css
+++ b/estilo.css
@@ -150,7 +150,7 @@ body {
     width: 90%;
     height: auto;
     grid-template-columns: 2fr 2fr;
-    grid-template-rows: 2fr 2fr;
+    grid-template-rows: 2fr 2fr 2fr;
     grid-template-areas:
         "hijo-nuestrafirma hijo-quienessomos"
         "hijo-nuestramision hijo-nuestramision";
@@ -195,7 +195,14 @@ body {
 .derecho-laboral {
     margin: 30px;
     padding: 20px;
-    color: black
+    color: black;
+    transition: all 1s ease;
+}
+
+.derecho-laboral:hover {
+    width: 400px;
+    background-color: white;
+    filter: brightness(50%);
 }
 
 .derecho-laboral-lista {
@@ -206,7 +213,14 @@ body {
 .derecho-civil {
     margin: 30px;
     padding: 20px;
-    color: black
+    color: black;
+    transition: all 1s ease;
+}
+
+.derecho-civil:hover {
+    width: 400px;
+    background-color: white;
+    filter: brightness(50%);
 }
 
 .derecho-civil-lista {
@@ -217,7 +231,14 @@ body {
 .derecho-de-familia {
     margin: 30px;
     padding: 20px;
-    color: black
+    color: black;
+    transition: all 1s ease;
+}
+
+.derecho-de-familia:hover {
+    width: 400px;
+    background-color: white;
+    filter: brightness(50%);
 }
 
 .derecho-de-familia-lista {
@@ -228,7 +249,14 @@ body {
 .derecho-penal {
     margin: 30px;
     padding: 20px;
-    color: black
+    color: black;
+    transition: all 1s ease;
+}
+
+.derecho-penal:hover {
+    width: 400px;
+    background-color: white;
+    filter: brightness(50%);
 }
 
 .derecho-penal-lista {
@@ -397,22 +425,48 @@ body {
     padding: 5px 10px;
 }
 
-@media screen and (max-width: 700px) {
-   
-    .df-navbar{
+@media screen and (max-width: 1024px) {
+    .df-navbar {
         flex-direction: column;
     }
 
-    .df-ul{
+    .df-ul {
         flex-direction: column;
     }
-   
-   .df-areas{
-    flex-direction: column;
-   }
-    .extrajudiciales{
+
+    .df-main-areas {
+        flex-direction: column;
+    }
+
+    .df-areas {
+        height: auto;
+        flex-direction: column;
+    }
+
+    .derecho-laboral {
+        text-align: center;
+        transition:none;
+    }
+
+    .derecho-civil {
+        text-align: center;
+        transition:none;
+    }
+
+    .derecho-de-familia {
+        text-align: center;
+        transition:none;
+    }
+
+    .derecho-penal {
+        text-align: center;
+        transition: none;
+    }
+
+    .extrajudiciales {
         padding: 0px;
     }
+
     .contenedor-presentacion {
         display: grid;
         margin: 10px;
@@ -425,6 +479,175 @@ body {
             "hijo-nuestrafirma"
             "hijo-quienessomos"
             "hijo-nuestramision";
+    }
+
+    .quienes-somos-parrafo {
+        height: auto;
+    }
+
+    .nuestra-firma-parrafo {
+        height: auto;
+    }
+
+    .nuestra-mision-parrafo {
+        height: auto;
+    }
+
+    .contenedor-turnos {
+        margin: 10px;
+        padding: 10px;
+        width: 90%;
+        height: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr;
+        grid-template-areas:
+            "div-reclamos formulario-de-reclamo";
+        background-image: url(./imagenes/justicia+retributiva+y+restaurativa.jpeg);
+        background-size: cover;
+    }
+}
+
+@media screen and (max-width: 580px) {
+    .df-navbar {
+        flex-direction: column;
+    }
+
+    .df-ul {
+        flex-direction: column;
+    }
+
+    .df-main-areas {
+        flex-direction: column;
+    }
+
+    .df-areas {
+        height: auto;
+    }
+
+    .derecho-laboral {
+        text-align: center;
+    }
+
+    .derecho-civil {
+        text-align: center;
+    }
+
+    .derecho-de-familia {
+        text-align: center;
+    }
+
+    .derecho-penal {
+        text-align: center;
+    }
+
+    .extrajudiciales {
+        padding: 0px;
+    }
+
+    .contenedor-presentacion {
+        display: grid;
+        margin: 10px;
+        padding: 10px;
+        width: 90%;
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas:
+            "hijo-nuestrafirma"
+            "hijo-quienessomos"
+            "hijo-nuestramision";
+    }
+
+    .quienes-somos-parrafo {
+        height: auto;
+    }
+
+    .nuestra-firma-parrafo {
+        height: auto;
+    }
+
+    .nuestra-mision-parrafo {
+        height: auto;
+    }
+
+    .contenedor-turnos {
+        margin: 10px;
+        padding: 10px;
+        width: 90%;
+        height: auto;
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: 2fr;
+        grid-template-areas:
+            "div-reclamos formulario-de-reclamo";
+        background-image: url(./imagenes/justicia+retributiva+y+restaurativa.jpeg);
+        background-size: cover;
+    }
+}
+
+@media screen and (max-width: 320px) {
+
+    .df-navbar {
+        flex-direction: column;
+    }
+
+    .df-ul {
+        flex-direction: column;
+    }
+
+    .df-main-areas {
+        flex-direction: column;
+    }
+
+    .df-areas {
+        height: auto;
+    }
+
+    .derecho-laboral {
+        text-align: center;
+    }
+
+    .derecho-civil {
+        text-align: center;
+    }
+
+    .derecho-de-familia {
+        text-align: center;
+    }
+
+    .derecho-penal {
+        text-align: center;
+    }
+
+    .extrajudiciales {
+        padding: 0px;
+    }
+
+    .contenedor-presentacion {
+        display: grid;
+        margin: 10px;
+        padding: 10px;
+        width: 90%;
+        height: auto;
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-areas:
+            "hijo-nuestrafirma"
+            "hijo-quienessomos"
+            "hijo-nuestramision";
+    }
+
+    .quienes-somos-parrafo {
+        height: auto;
+    }
+
+    .nuestra-firma-parrafo {
+        height: auto;
+    }
+
+    .nuestra-mision-parrafo {
+        height: auto;
     }
 
     .contenedor-turnos {
