--- a/scss/estilo.css
+++ b/scss/estilo.css
@@ -1,1 +1,13 @@
-/*# sourceMappingURL=estilo.css.map */
+portada .titulo {
+  font-weight: normal;
+  text-align: center;
+  margin: 20px;
+  padding: 20px;
+  font-weight: bolder;
+  font-size: xx-large;
+}
+portada .subtitulo {
+  font-weight: normal;
+  text-align: center;
+  font-size: x-large;
+}/*# sourceMappingURL=estilo.css.map */
