--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,10 +1,10 @@
-@import './reset';
-@import './variables';
-@import './navbar';
-@import './index';
-@import './areas';
-@import './contacto';
-@import './extrajudiciales';
-@import './turnos';
-@import './footer';
+@import './partials/reset';
+@import './partials/variables';
+@import './partials/navbar';
+@import './partials/index';
+@import './partials/areas';
+@import './partials/contacto';
+@import './partials/extrajudiciales';
+@import './partials/turnos';
+@import './partials/footer';
 
