--- a/scss/partials/_index.scss
+++ b/scss/partials/_index.scss
@@ -30,6 +30,7 @@
   flex-direction: column;
   align-items: center;
   font-size: larger;
+  text-align: center;
 
     .hijo-nuestrafirma{
       margin: 20px;
