--- a/scss/estilo.css
+++ b/scss/estilo.css
@@ -27,7 +27,7 @@ body {
 }
 
 .portada {
-  background-image: url(../imagenes/fondo-estudio.jpg);
+  background-image: url(/imagenes/fondo-estudio-liviana.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   height: 550px;
