--- a/scss/estilo.css
+++ b/scss/estilo.css
@@ -152,6 +152,45 @@ body {
   padding: 20px;
 }
 
+.titulo-contacto {
+  display: flex;
+  justify-content: center;
+  height: 200px;
+  align-items: flex-end;
+  background-color: rgb(0, 0, 0);
+  color: rgb(230, 223, 223);
+}
+
+.formulario-de-contacto {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: rgb(0, 0, 0);
+}
+.formulario-de-contacto .nombre-y-apellido {
+  margin: 5px;
+  padding: 5px;
+}
+.formulario-de-contacto .e-mail {
+  margin: 5px;
+  padding: 5px;
+}
+.formulario-de-contacto .form-floating {
+  margin: 5px;
+  padding: 5px;
+}
+.formulario-de-contacto .form-floating .form-control {
+  width: 300px;
+}
+.formulario-de-contacto .enviar-datos {
+  margin: 5px;
+  padding: 5px;
+}
+.formulario-de-contacto .borrar-campos {
+  margin: 5px;
+  padding: 5px;
+}
+
 .extrajudiciales {
   background-color: rgb(0, 0, 0);
   color: rgb(230, 223, 223);
@@ -184,7 +223,7 @@ body {
   grid-template-columns: 2fr 2fr 2fr;
   grid-template-rows: 1fr 3fr;
   grid-template-areas: "completa-los-datos completa-los-datos completa-los-datos" "titular tercero siniestro";
-  background-image: url(./imagenes/imagen-transito.jpg);
+  background-image: url(/imagenes/imagen-transito.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   color: rgb(230, 223, 223);
@@ -292,6 +331,32 @@ body {
 }
 .contenedor-enviar-datos .borrar-campos {
   margin: 10px;
+}
+
+.contenedor-turnos {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+  background-color: rgb(0, 0, 0);
+}
+.contenedor-turnos .titulo-turnos {
+  margin: 30px;
+  padding: 30px;
+  color: rgb(230, 223, 223);
+}
+.contenedor-turnos .form-select {
+  width: 400px;
+  margin: 20px;
+  padding: 20px;
+}
+.contenedor-turnos .turnero {
+  margin: 35px;
+  padding: 35px;
+}
+.contenedor-turnos .turnero .link-turnos {
+  color: rgb(230, 223, 223);
 }
 
 .df-footer {
