--- a/scss/partials/_index.scss
+++ b/scss/partials/_index.scss
@@ -1,5 +1,5 @@
 .portada {
-    background-image:url(/imagenes/fondo-estudio-liviana.jpg);
+    background-image:url(../../imagenes/fondo-estudio-liviana.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     height: 550px;
