--- a/scss/partials/_extrajudiciales.scss
+++ b/scss/partials/_extrajudiciales.scss
@@ -30,7 +30,7 @@
 }
 
 
-.contenedor-formulario-reclamos {
+.dg-formulario {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
     grid-template-rows: 1fr 3fr;
