--- a/scss/partials/_extrajudiciales.scss
+++ b/scss/partials/_extrajudiciales.scss
@@ -30,7 +30,7 @@
 }
 
 
-.dg-formulario {
+#form-titular {
     display: grid;
     grid-template-columns: 2fr 2fr 2fr;
     grid-template-rows: 1fr 3fr;
@@ -138,15 +138,10 @@
     }
 }
 
-.contenedor-enviar-datos{
+.btn-reclamo{
     display:flex;
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    .eviar-datos{
-        margin: 10px;
-    }
-    .borrar-campos{
-        margin: 10px;
-    }
+
 }
